--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.0",
+    "sass": "^1.54.0",
+    "sass-loader": "^13.0.2",
     "vite": "^3.0.0"
   }
 }
