--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -7,12 +7,24 @@ name: Deploy to Firebase Hosting on merge
     branches:
       - master
 jobs:
-  build_and_deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: FirebaseExtended/action-hosting-deploy@v0
+      - name: Install Dependencies
+        run: npm install
+      - name: Build
+        run: npm run build
         with:
+          name: src
+          path: src
+  deploy:
+    runs-on: ubuntu-latest
+      steps:
+       - uses: FirebaseExtended/action-hosting-deploy@v0
+        with:
+          name: dist
+          path: dist
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_MOVIES_B204A }}'
           channelId: live
