--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -7,21 +7,12 @@ name: Deploy to Firebase Hosting on merge
     branches:
       - master
 jobs:
-  build:
+  build_and_deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Install Dependencies
-        run: npm install
-      - name: Build
-        run: npm run build
-        with:
-          name: dist
-          path: dist
-  deploy:
-    runs-on: ubuntu-latest
-      steps:
-       - uses: FirebaseExtended/action-hosting-deploy@v0
+      - run: npm run build
+      - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           name: dist
           path: dist
