--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "firebase": "^9.9.2",
+    "pinia": "^2.1.3",
     "vue": "^3.2.37",
     "vue-router": "^4.1.3"
   },
